improved hello world

--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    hello world
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  <table cellspacing="25">
+    <tr>
+      <td><img src="fat.png" alt=""></td>
+      <td>
+        <h1>hello world</h1>
+      </td>
+    </tr>
+  </table>
+
+
+</body>
+
 </html>
